# inso_

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
Dokumentation-Information/Ablauf/: Ablauf.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/tests/unit/: test_health.py
docs/: dsgvo-konzept.md
infra/nginx/: dev.conf
infra/scripts/: rollback.sh
