[project]
name = "insolvenz-manager-api"
version = "0.1.0"
description = "Digitale Begleitung des deutschen Verbraucherinsolvenzverfahrens"
requires-python = ">=3.12"
dependencies = [
    # Web-Framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Datenbank
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",          # PostgreSQL async Treiber
    "pgcrypto",               # Feldebeneverschlüsselung via Extension
    # Validierung & Settings
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    # Task Queue
    "celery[redis]>=5.4",
    "redis>=5.0",
    # PDF-Generierung
    "weasyprint>=62",
    "jinja2>=3.1",
    # E-Mail
    "fastapi-mail>=1.4",
    # HTTP-Client (für Health Checks etc.)
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",            # TestClient
    "factory-boy>=3.3",       # Test-Fixtures
    "ruff>=0.4",
    "mypy>=1.10",
    "sqlalchemy[mypy]>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (Security!)
]
ignore = [
    "S101", # assert in Tests erlaubt
]

[tool.ruff.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
